--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ padding: 0;
 
 head {
 text-align: center;
-background-color: #;
+background-color: #ecc19c;
 padding-top: 30px;
 padding-bottom: 30px;
 }
@@ -37,15 +37,4 @@ background-color: #000000;
 color: white;
 }
 
-a:link {
-color: 
-}
-
-a:visited {
-color:
-}
-
-a:hover {
-
-}
 
