--- a/style.css
+++ b/style.css
@@ -32,5 +32,5 @@ color: white;
 .padding-border {
 padding-top: 60px;
 padding-bottom: 60px;
-border: solid 20px #ff6e40;
+border: solid 20px scarlet;
 }
