--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* This is CSS */
 * {
 margin: 0;
 padding: 0;
@@ -28,7 +29,7 @@ footer {
 background-color: #000000;
 color: white;
 }
-
+/* Class Selectors */
 .padding-border {
 padding-top: 60px;
 padding-bottom: 60px;
