--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ margin: 0;
 padding: 0;
 }
 
+#main-heading {
+text-align: center;
+background-color: #000000;
+color: #ff6e40; 
+}
+
 head {
 text-align: center;
 padding-top: 30px;
@@ -21,8 +27,8 @@ color: white;
 }
 
 #image-of-self {
-max-width: 100%;
-max-height: 300%;
+max-width: 50%;
+max-height: 250%;
 }
 p {
 font-size: 20px;
