--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* This is CSS */
 * {
-margin: 0;
+margin: 10%;
 padding: 0;
 }
 
@@ -44,13 +44,6 @@ color: white;
 padding-top: 60px;
 padding-bottom: 60px;
 border: solid 20px scarlet;
-}
-
-header, 
-body, 
-footer {
-margin-left: 10%
-margin-right: 10%
 }
 
 /* Pseudo Class Selectors */
