--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ footer {
 background-color: #000000;
 color: white;
 }
+
+head, 
+body, 
+footer {
+margin-top: 10%;
+margin-right: 10%;
+margin-bottom: 10%;
+margin-left: 10%;
+}
+
 /* Class Selectors */
 .padding-border {
 padding-top: 60px;
