--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* This is CSS */
 * {
-margin: 0%;
+margin: 0;
 padding: 0;
 }
 
@@ -8,6 +8,8 @@ padding: 0;
 text-align: center;
 background-color: #000000;
 color: #ff6e40; 
+padding-top: 60px;
+padding-bottom: 60px;
 }
 
 head {
