--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ background-color: #1e847f;
 color: white;
 }
 
-#image-of-self {
-max-width: 50%;
-max-height: 250%;
+.image-of-self {
+max-width: 100%;
+max-height: 100%;
 }
 
 p {
