--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* This is CSS */
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+</style> 
+
 * {
 margin: 0;
 padding: 0;
