--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ font-family: 'Righteous', cursive;
  color: #ff6e40;
 }
  
+h3 {
+color: #000000;
+}
+
 footer {
 font-family: 'Righteous', cursive;
  background-color: #000000;
