--- a/style.css
+++ b/style.css
@@ -45,11 +45,11 @@ max-height: 100%;
 p {
 font-family: 'Righteous', cursive;
  font-size: 20px;
- color: #ff6e40;
+ color: #000000;
 }
  
 h3 {
-color: #000000;
+color: #FFD700;
 }
 
 footer {
