--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ font-family: 'Righteous', cursive;
 footer {
 font-family: 'Righteous', cursive;
  background-color: #000000;
-color: white;
+color: #FFFFFF;
 }
 
 /* Class Selectors */
