--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ font-weight: bold;
 header {
 font-family: 'Righteous', cursive;
  font-weight: bold;
- background-color: #ecc19c;
+ background-color: #FFFF00;
 }
 
 main {
