--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ max-width: 100%;
 max-height: auto;
 }
 
+h2 {
+text-align: center;
+}
+
 p {
 font-family: 'Righteous', cursive;
  font-weight: bold;
