--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ color: #000000;
 .image-of-self {
 max-width: 100%;
 max-height: auto;
-padding: 150px, 100px, 150px, 100px;
+padding: 150px 100px 150px 100px;
 }
 
 p {
