--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ padding: 0;
 
 #main-heading {
 text-align: center;
-font-family: 'Righteous', cursive;
+font-family: cursive;
  font-weight: bold;
  background-color: #000000;
 color: #ff6e40; 
@@ -20,7 +20,7 @@ padding-bottom: 60px;
 
 head {
 text-align: center;
-font-family: 'Righteous', cursive;
+font-family: cursive;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
@@ -28,14 +28,14 @@ font-weight: bold;
 }
 
 header {
-font-family: 'Righteous', cursive;
+font-family: cursive;
  font-weight: bold;
  background-color: rgba(255, 215, 0, .5);
 }
 
 main {
 text-align: left;
-font-family: 'Righteous', cursive;
+font-family: cursive;
 font-weight: bold;
  background-color: #1e847f;
 color: #000000;
@@ -48,7 +48,7 @@ padding: 150px 100px 150px 100px;
 }
 
 p {
-font-family: 'Righteous', cursive;
+font-family: cursive;
  font-weight: bold;
  text-indent: 50px;
  text-align: justify;
@@ -57,7 +57,7 @@ font-family: 'Righteous', cursive;
 }
  
 footer {
-font-family: 'Righteous', cursive;
+font-family: cursive;
  font-weight: bold;
  background-color: #000000;
 color: #FFFFFF;
