--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ padding: 150px 100px 150px 100px;
 p {
 font-family: cursive;
  font-weight: bold;
- text-indent: 50px;
  text-align: justify;
  font-size: 20px;
+ margin: 0, 10, 0, 10;
  color: #000000;
 }
  
