--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ font-family: cursive; righteous;
  font-weight: bold;
  text-align: justify;
  font-size: 20px;
- padding: 0 10 0 10;
+ padding: 0px 5px 0px 5px;
  color: #000000;
 }
  
