--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ font-family: cursive; righteous;
 color: #FFFFFF;
 }
 
+.phone {
+color: #FFFFFF;
+}
 /* Class Selectors */
 .padding-border {
 padding-top: 60px;
