--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer {
 font-family: cursive; righteous;
  font-weight: bold;
  background-color: #000000;
-color: #FFFFFF;
+color: #;
 }
 
 .phone {
