--- a/style.css
+++ b/style.css
@@ -24,7 +24,13 @@ font-family: cursive; righteous;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
+}
 
+.logo {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
 }
 
 header {
