--- a/style.css
+++ b/style.css
@@ -27,10 +27,7 @@ font-weight: bold;
 }
 
 .logo {
-display: block;
-margin-left: auto;
-margin-right: auto;
-width: 50%;
+text-align: center;
 }
 
 header {
