--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ font-family: cursive; righteous;
 }
  
 .image-self {
-max-width: 100%
-max-height: 100%
+max-width: 1871px;
+max-height: 2806px;
 }
 
 footer {
