--- a/style.css
+++ b/style.css
@@ -53,6 +53,18 @@ font-family: cursive; righteous;
 margin: auto;
 }
 
+.lightbulb {
+margin: auto;
+}
+
+.library {
+margin: auto;
+}
+
+.maldives {
+margin: auto;
+}
+
 .image-self {
 max-width: 1871px;
 max-height: 2806px;
