--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ font-family: cursive; righteous;
  font-weight: bold;
  text-align: justify;
  font-size: 20px;
- padding: 0px 5px 0px 5px;
+ padding: 10px;
  color: #000000;
 }
 
