--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ text-align: center;
 text-color: rgba(30, 132, 127, .25);
 font-family: cursive; righteous;
  font-weight: bold;
- background-color: #000000;
+ background-color: rgba(0, 0, 0, .25);
 padding-top: 60px;
 padding-bottom: 60px;
 }
