--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ font-family: cursive; righteous;
 
 .logo {
 margin: auto;
-box-shadow: 20px 20px 15px rgba(30, 132, 127, .25);
+box-shadow: 20px 20px 15px rgba(30,132,127, .25);
 }
 
 .lightbulb {
