--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ font-family: cursive; righteous;
 }
 
 .logo {
-box-shadow: -10px -10px 10px 10px rgba( 0,0,0, .5)
+box-shadow: -10px -10px 10px 10px rgba( 0,0,0, .5), inset 0 0 50px 5px firebrick;
 }
 
 .lightbulb {
