--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ padding: 0;
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
 text-shadow: 20px 20px 10px 10px rgba(0,0,0, .75)
-font-family: cursive; righteous;
+font-family: cursive, righteous;
  font-weight: bold;
  background-color: rgba(0, 0, 0, .25);
 padding-top: 60px;
@@ -21,32 +21,32 @@ padding-bottom: 60px;
 
 head {
 text-align: center;
-rgb(30, 132, 127);font-family: cursive; righteous;
+font-family: cursive, righteous;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
 }
 
 header {
-font-family: cursive; righteous;
+font-family: cursive, righteous;
  font-weight: bold;
  background-color: rgba(30, 132, 127, .25);
 }
 
 main {
 text-align: left;
-font-family: cursive; righteous;
+font-family: cursive, righteous;
 font-weight: bold;
- background-color: #1e847f;
+ background-color: rgba(30, 132, 127, .25);
 color: #000000;
 }
 
 p {
-font-family: cursive; righteous;
+font-family: cursive, righteous;
  font-weight: bold;
  text-align: justify;
  font-size: 20px;
- color: #000000;
+ color: rgba(178, 34, 34, 1);
 }
 
 .logo {
