--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ font-family: cursive, righteous;
  font-weight: bold;
  text-align: justify;
  font-size: 20px;
- color: rgba(178, 34, 34, 1);
+ color: rgba(30, 132, 127);
 }
 
 .logo {
@@ -76,7 +76,7 @@ footer {
 font-family: cursive; righteous;
  font-weight: bold;
  background-color: rgba(30, 132, 127, .25);
-color: #;
+color: rgba(30, 132, 127);
 }
 
 /* Class Selectors */
