--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ font-weight: bold;
 header {
 font-family: cursive, righteous;
  font-weight: bold;
- background-color: rgba(30, 132, 127, .25);
+ background-color: rgb(30, 132, 127,);
 }
 
 main {
 text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
- background-color: rgba(30, 132, 127, .25);
+ background-color: rgb(30, 132, 127,);
 color: #000000;
 }
 
@@ -46,7 +46,7 @@ font-family: cursive, righteous;
  font-weight: bold;
  text-align: justify;
  font-size: 20px;
- color: rgb(30, 132, 127);
+ color: #000000;
 }
 
 .logo {
