--- a/style.css
+++ b/style.css
@@ -67,10 +67,11 @@ margin: auto;
 }
 
 .image-self {
-max-width: 1871px;
-max-height: 2806px;
+max-width: 3000px;
+max-height: 3000px;
 background-size: cover;
 box-sizing: border-box;
+border-radius: 50%;
 }
 
 footer {
