--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ padding: 0;
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
 text-shadow: 20px 20px 10px 10px rgba(0,0,0, .75)
-font-family: cursive, righteous;
+font-family: cursive;
  font-weight: bold;
  background-color: rgb(0, 0, 0);
 padding-top: 60px;
@@ -50,8 +50,8 @@ font-family: cursive, righteous;
 }
 
 .logo {
-box-shadow: -10px -10px 10px 10px rgba( 0,0,0, .5), inset 0 0 50px 5px firebrick;
-border-radius: 10%;
+box-shadow: -10px -10px 10px 10px rgba( 0,0,0, .5), inset 0 0 50px 5px rgb(30, 132, 127);
+border-radius:5%;
 }
 
 .lightbulb {
