--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ padding: 0;
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
 text-shadow: 20px 20px 10px 10px rgba(0,0,0, .75)
-font-family: cursive;
+font-family: cursive, righteous;
  font-weight: bold;
  background-color: rgb(0, 0, 0);
 padding-top: 60px;
