--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ font-family: cursive, righteous;
 }
 
 .logo {
-background-image: radial-gradient( circle at top, #000, #847fe6, rgba(30, 132,127, 0.25));
+background: radial-gradient( circle at top, #000, #847fe6, rgba(30, 132,127, 0.25), transparent 75%);
 }
 
 .lightbulb {
