--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ font-weight: bold;
 header {
 font-family: cursive, righteous;
  font-weight: bold;
-background: radial-gradient(circle at top, #000, #847fe6, rgba(30, 132,127, 0.25), transparent 90% <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>);
-}
-
+background: radial-gradient(circle at top, #000, #847fe6, rgba(30, 132,127, 0.25);
+ }
+ 
 main {
 text-align: left;
 font-family: cursive, righteous;
