--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ margin: 0;
 padding: 0;
 }
 
+#grad {
+background: linear-gradient(bottom to top, #000, #847fe6, rgba(30, 132, 127, 0.25);
+}
+
 #main-heading {
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
@@ -29,7 +33,6 @@ font-weight: bold;
 header {
 font-family: cursive, righteous;
  font-weight: bold;
-background: linear-gradient(bottom to top, #000, #847fe6, rgba(30, 132, 127, 0.25);
  }
  
 main {
@@ -37,7 +40,6 @@ text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
 text-color: #000;
-background: linear-gradient(top to bottom, #000, #847fe6, rgba(30, 132, 127, 0.25); 
 }
 
 p {
