--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ font-weight: bold;
 text-color: #000;
 }
 
+.grad {
+background-image: linear-gradient 
+}
+
 p {
 font-family: cursive, righteous;
  font-weight: bold;
