--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ font-weight: bold;
 header {
 font-family: cursive, righteous;
  font-weight: bold;
+ background-image: #ffa949, firebrick;
  }
  
 main {
