--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ font-family: cursive, righteous;
  font-weight: bold;
  }
  
-.header grad {
+.header-grad {
  background: linear-gradient (#ffa949, firebrick);
 }
 
