--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ font-family: cursive, righteous;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
+ background: linear-gradient(orange, firebrick);
 }
 
 header {
@@ -32,19 +33,11 @@ font-weight: bold;
 text-color: rgba(30, 132, 127, .25);
 }
  
-.header-grad {
- background: linear-gradient (#ffa949, firebrick);
-}
-
 main {
 text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
 text-color: #000;
-}
-
-.grad {
-background-image: linear-gradient 
 }
 
 p {
