--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ font-family: cursive, righteous;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
- 
- background: linear-gradient(orange, firebrick);
+ background: #FFFFFF rgb(255, 255, 255) hsv(187.2, 0, 100);
 }
 
 header {
