--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ font-family: cursive, righteous;
 font-weight: bold;
  padding-top: 60px;
  padding-bottom: 60px;
- background-color: #FFFFFF, rgb(255, 255, 255), hsv(187.2, 0, 100);
+ background-color: 
 }
 
 header {
@@ -38,7 +38,12 @@ text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
 text-color: #000;
-}
+background-color: #FFFFFF;
+                  hsl(0, 0%, 100%);
+                  hsv(125.20001220703125, 0%, 100%);
+                  hwb(125.20001220703125, 100%, 0%);
+                  cmyk(0%, 0%, 0%, 0%);
+          
 
 p {
 font-family: cursive, righteous;
