--- a/style.css
+++ b/style.css
@@ -84,8 +84,9 @@ border-radius: 10%;
 footer {
 font-family: cursive; righteous;
  font-weight: bold;
+ text-color: rgb(30, 132, 127);
  background-color: rgb(0, 0, 0);
-color: rgb(30, 132, 127);
+
 }
 
 /* Class Selectors */
