--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ text-color: #000;
                   hwb(125.20001220703125, 100%, 0%);
                   cmyk(0%, 0%, 0%, 0%);
    */       
+}
 
 p {
 font-family: cursive, righteous;
