--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ background-position: center;
 font-family: cursive; righteous;
  font-weight: bold;
  text-color: rgb(30, 132, 127);
- background-color: rgb(0, 0, 0);
+ background: rgb(0, 0, 0);
 }
 
 /* Class Selectors */
