--- a/style.css
+++ b/style.css
@@ -96,9 +96,13 @@ background-image: url('')
 font-family: cursive; righteous;
  font-weight: bold;
  text-color: rgb(30, 132, 127);
- background: rgb(0, 0, 0);
+ background-color: rgb(0, 0, 0);
 }
 
+ .contact {
+ background-color: rgb(0, 0, 0);
+ }
+ 
 /* Class Selectors */
 .padding-border {
 padding-top: 60px;
