--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet"> 
 </style>
 
+* {
+margin: 0;
+padding: 0;
+/*box-sizing: border-box;*/
+}
+
 #main-heading {
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
