--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ background-image: url('')
  width: 46.5%;
  }
   
+ .library,
+ .image-self {
+ float: right;
+ }
+ 
  footer {
 font-family: cursive; righteous;
  font-weight: bold;
