--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ head {
 text-align: center;
 font-family: cursive, righteous;
 font-weight: bold;
-background-color: rgba(255, 0, 0, .5);
 }
 
 header {
@@ -71,7 +70,8 @@ max-width: 100%;
 max-height: 100%;
 background-size: cover;
 border-radius: 10%;
-background-image: url('')
+background-image: url('<a href="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w600-h315-p-k" /> </a>background-color: rgba(255, 0, 0, .5);
+')
 }
 
 /* Floated Columns----------*/
