--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ box-sizing: border-box;
 text-align: center;
 text-color: rgba(30, 132, 127, .25);
 font-family: cursive, righteous;
+}
+
+h1 {
 text-shadow: 5px 10px 0 rgba(124, 252, 0, 0.5;
 }
 
