--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ border-radius: 50%;
 display: block;
 margin-left: auto;
 margin-right: auto;
+margin: 20%;
 width: 50%;
 background-image: url('')
 }
