--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ border-radius: 50%;
 display: block;
 margin-left: auto;
 margin-right: auto;
-margin: 5% 20%;
+margin: 5% 20% 5% 20%;
 width: 50%;
 background-image: url('')
 }
@@ -65,7 +65,7 @@ background-image: url('')
 display: block;
 margin-left: auto;
 margin-right: auto;
-margin: 5% 20%;
+margin: 5% 20% 5% 20%;
 width: 50%;
 background-image: url('')
  }
@@ -74,7 +74,7 @@ background-image: url('')
 display: block;
 margin-left: auto;
 margin-right: auto;
-margin: 5% 20%;
+margin: 5% 20% 5% 20%;
 width: 50%;
 background-image: url('')
 }
@@ -85,7 +85,7 @@ max-height: 100%;
 display: block;
 margin-left: auto;
 margin-right: auto;
-margin: 5% 20%;
+margin: 5% 20% 5% 20%;
 width: 50%;
 background-size: cover;
 background-image: url('<a href="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/QedrO3BDNaQcFa12GvmDXd_RgqCYVNYWvmvAtXC7krlkA2pBxu3hSkiSZZq0ny6vx84FxPHGB5tckttVlnd_RHUKXUWc7whuDuk2BKbI1EESnzwS5O91dwCb6rcfBIVRYUgxCMV4lQ=w600-h315-p-k" /> </a>background-color: rgba(255, 0, 0, .5);
