--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ background-color: rgba(124, 252, 0, 0.5);
 p {
 font-family: cursive, righteous;
  font-weight: bold;
- text-align: justify;
+ text-align: center;
  font-size: 20px;
  color: #000000;
 }
