--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ text-color: #000;
 background-color: rgba(124, 252, 0, 0.5);
 }  
  
+.top {
+text-align: left;
+}
+
 p {
 font-family: cursive, righteous;
  font-weight: bold;
