--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
 text-color: #000;
-background-color: rgba(255, 0, 225, 0.25);
+background-color: ;
 }  
  
 p {
