--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ text-align: left;
 font-family: cursive, righteous;
 font-weight: bold;
 text-color: #000;
-background-color: ;
+background-color: #F7F9F9;
 }  
  
 p {
