--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ margin-right: auto;
 margin: 5% 20% 5% 20%;
 width: 50%;
 background-image: url('')
-border: 20px solid  #ebedef;
+margin: 20px solid  #ebedef;
 }
 
 .library {
