--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ font-weight: bold;
 text-color: rgba(30, 132, 127, .25);
 }
 
-.header nav {
+.nav {
 background-color: #FFB6C1;
 display: inline-block;
 padding: 20px;
